# FYD_PROJECT

./: .gitignore  CMakeLists.txt  FYD_Project.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
input_files/: 980494-FRI-Driver.init
src/: FYD_Client.cpp  acceleration_log.txt~  accelerometers.cpp  accelerometers.h  compile  compile~  conio.cpp  flexiforce.cpp  flexiforce.h  functions.cpp  functions.h  globals.h  loadcell.cpp  loadcell.h  main.cpp  wireless_communicator.cpp  wireless_communicator.h
